--- a/Doocine-iOS/Base.lproj/Main.storyboard
+++ b/Doocine-iOS/Base.lproj/Main.storyboard
@@ -823,21 +823,20 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sGZ-Qd-LjT">
-                                <rect key="frame" x="324" y="767" width="120" height="40"/>
-                                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="q6U-9z-uzN"/>
-                                    <constraint firstAttribute="height" constant="40" id="udh-DF-ked"/>
-                                </constraints>
-                                <state key="normal" title="Delete">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_banner_doocine" translatesAutoresizingMaskIntoConstraints="NO" id="DvN-db-Vxg">
                                 <rect key="frame" x="384" y="133" width="384" height="360"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sGZ-Qd-LjT">
+                                <rect key="frame" x="694" y="44" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="q6U-9z-uzN"/>
+                                    <constraint firstAttribute="height" constant="50" id="udh-DF-ked"/>
+                                </constraints>
+                                <state key="normal" image="icon_delete">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <constraints>
@@ -858,7 +857,7 @@
                             <constraint firstItem="eey-or-zpl" firstAttribute="top" secondItem="Lu0-Gs-F5j" secondAttribute="bottom" constant="8" id="HUo-Wg-0XQ"/>
                             <constraint firstItem="7Fl-d1-ev5" firstAttribute="top" secondItem="gay-aR-hUU" secondAttribute="bottom" constant="12.5" id="K9b-fG-1lL"/>
                             <constraint firstItem="H61-4C-R2a" firstAttribute="leading" secondItem="MxP-2Z-s6z" secondAttribute="leading" id="KcL-jY-x8S"/>
-                            <constraint firstItem="sGZ-Qd-LjT" firstAttribute="top" secondItem="89B-0L-7uV" secondAttribute="bottom" constant="24" id="M20-MP-kNR"/>
+                            <constraint firstItem="sGZ-Qd-LjT" firstAttribute="top" secondItem="1u7-Ab-kVD" secondAttribute="bottom" constant="24" id="MSm-iM-tle"/>
                             <constraint firstItem="Dkb-Ld-wVi" firstAttribute="top" secondItem="X3z-Rs-EuT" secondAttribute="bottom" constant="8" id="NWX-Ia-q3H"/>
                             <constraint firstAttribute="trailing" secondItem="DvN-db-Vxg" secondAttribute="trailing" id="Rj5-AU-4gn"/>
                             <constraint firstItem="DvN-db-Vxg" firstAttribute="leading" secondItem="xVv-5R-d3j" secondAttribute="trailing" id="Rqu-z0-77L"/>
@@ -870,7 +869,7 @@
                             <constraint firstItem="AKW-Ja-H33" firstAttribute="top" secondItem="pNp-1O-f9S" secondAttribute="bottom" constant="16" id="d4l-oD-kIa"/>
                             <constraint firstItem="89B-0L-7uV" firstAttribute="top" secondItem="H61-4C-R2a" secondAttribute="bottom" constant="24" id="dvJ-Fu-MPK"/>
                             <constraint firstItem="Lu0-Gs-F5j" firstAttribute="top" secondItem="lTA-s5-haH" secondAttribute="bottom" constant="12.5" id="exD-Ez-WgT"/>
-                            <constraint firstItem="sGZ-Qd-LjT" firstAttribute="centerX" secondItem="MxP-2Z-s6z" secondAttribute="centerX" id="h8W-b8-QyN"/>
+                            <constraint firstAttribute="trailing" secondItem="sGZ-Qd-LjT" secondAttribute="trailing" constant="24" id="l1j-eN-Zxs"/>
                             <constraint firstItem="aID-Uk-r7G" firstAttribute="leading" secondItem="7Fl-d1-ev5" secondAttribute="leading" id="l56-Cl-OGd"/>
                             <constraint firstAttribute="trailing" secondItem="eey-or-zpl" secondAttribute="trailing" constant="24" id="lri-i6-Qcy"/>
                             <constraint firstItem="xVv-5R-d3j" firstAttribute="top" secondItem="IC4-Qn-2IT" secondAttribute="bottom" constant="24" id="mMN-Wa-NzB"/>
@@ -923,6 +922,7 @@
     </scenes>
     <resources>
         <image name="LaunchImage" width="1194" height="1590"/>
+        <image name="icon_delete" width="24" height="24"/>
         <image name="img_banner_doocine" width="1190" height="464"/>
     </resources>
     <inferredMetricsTieBreakers>
