--- a/Doocine-iOS/Base.lproj/Main.storyboard
+++ b/Doocine-iOS/Base.lproj/Main.storyboard
@@ -224,14 +224,26 @@
                                     <constraint firstAttribute="height" constant="300" id="lXu-u1-kuF"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOUTUBE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fkf-dp-ilM">
+                                <rect key="frame" x="664" y="872" width="80" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="CGx-cT-AMb"/>
+                                    <constraint firstAttribute="height" constant="30" id="MMr-Km-GUX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ogJ-5O-Th2" firstAttribute="top" secondItem="NqG-S5-MOr" secondAttribute="bottom" id="0TJ-L1-whA"/>
                             <constraint firstAttribute="trailing" secondItem="o1W-1n-ZnZ" secondAttribute="trailing" id="3d8-hH-xEh"/>
+                            <constraint firstAttribute="trailing" secondItem="Fkf-dp-ilM" secondAttribute="trailing" constant="24" id="9tw-Xy-aS0"/>
                             <constraint firstItem="ogJ-5O-Th2" firstAttribute="leading" secondItem="jtG-Wk-fne" secondAttribute="leading" id="AF0-qZ-ZBn"/>
                             <constraint firstItem="o1W-1n-ZnZ" firstAttribute="top" secondItem="1Rk-N8-wmP" secondAttribute="bottom" id="EAl-J3-GxG"/>
                             <constraint firstItem="NqG-S5-MOr" firstAttribute="top" secondItem="o1W-1n-ZnZ" secondAttribute="bottom" id="Rnv-o9-Udl"/>
+                            <constraint firstItem="Fkf-dp-ilM" firstAttribute="top" secondItem="kCr-UQ-UeL" secondAttribute="bottom" constant="24" id="U87-3z-oWo"/>
                             <constraint firstAttribute="trailing" secondItem="NqG-S5-MOr" secondAttribute="trailing" id="VMT-i0-oSB"/>
                             <constraint firstItem="kCr-UQ-UeL" firstAttribute="top" secondItem="ogJ-5O-Th2" secondAttribute="bottom" constant="24" id="Xvm-qg-neA"/>
                             <constraint firstItem="NqG-S5-MOr" firstAttribute="leading" secondItem="jtG-Wk-fne" secondAttribute="leading" id="bKS-82-RyF"/>
@@ -247,6 +259,7 @@
                         <outlet property="browseAllButton" destination="uNx-u6-9Cx" id="pNb-3p-yJZ"/>
                         <outlet property="collectionView" destination="ogJ-5O-Th2" id="XWy-TK-bMc"/>
                         <outlet property="projectCountLabel" destination="qSP-sr-OqT" id="Mtz-Do-sfG"/>
+                        <outlet property="youtubeChannelLabel" destination="Fkf-dp-ilM" id="XFo-Ww-MA5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Igb-x3-guW" userLabel="First Responder" sceneMemberID="firstResponder"/>
