--- a/Doocine-iOS/Base.lproj/Main.storyboard
+++ b/Doocine-iOS/Base.lproj/Main.storyboard
@@ -122,26 +122,16 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o1W-1n-ZnZ">
                                 <rect key="frame" x="0.0" y="64" width="768" height="200"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DOOCINE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r5f-S9-KTa">
-                                        <rect key="frame" x="241" y="24" width="287.5" height="76.5"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="64"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="STORYBOARD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="enK-w7-pd4">
-                                        <rect key="frame" x="240.5" y="116.5" width="288" height="57.5"/>
-                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="48"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_home_title" translatesAutoresizingMaskIntoConstraints="NO" id="6e4-JX-Fib">
+                                        <rect key="frame" x="262.5" y="42" width="243" height="116"/>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="r5f-S9-KTa" firstAttribute="centerX" secondItem="o1W-1n-ZnZ" secondAttribute="centerX" id="Dhq-fB-pOA"/>
+                                    <constraint firstItem="6e4-JX-Fib" firstAttribute="centerY" secondItem="o1W-1n-ZnZ" secondAttribute="centerY" id="7D1-xX-FJp"/>
                                     <constraint firstAttribute="height" constant="200" id="E8S-me-ni5"/>
-                                    <constraint firstItem="enK-w7-pd4" firstAttribute="top" secondItem="r5f-S9-KTa" secondAttribute="bottom" constant="16" id="Eue-St-4L4"/>
-                                    <constraint firstItem="enK-w7-pd4" firstAttribute="centerX" secondItem="o1W-1n-ZnZ" secondAttribute="centerX" id="cDV-ad-3Km"/>
-                                    <constraint firstItem="r5f-S9-KTa" firstAttribute="top" secondItem="o1W-1n-ZnZ" secondAttribute="top" constant="24" id="iZs-gS-YKn"/>
+                                    <constraint firstItem="6e4-JX-Fib" firstAttribute="centerX" secondItem="o1W-1n-ZnZ" secondAttribute="centerX" id="RzJ-bk-wq8"/>
+                                    <constraint firstItem="6e4-JX-Fib" firstAttribute="top" secondItem="o1W-1n-ZnZ" secondAttribute="top" constant="42" id="saX-5Y-dvH"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NqG-S5-MOr">
@@ -991,6 +981,7 @@
         <image name="icon_delete" width="24" height="24"/>
         <image name="icon_down_arrow" width="24" height="24"/>
         <image name="img_banner_doocine" width="1190" height="464"/>
+        <image name="img_home_title" width="243" height="116"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="WId-FU-vlQ"/>
