--- a/Doocine-iOS/Base.lproj/Main.storyboard
+++ b/Doocine-iOS/Base.lproj/Main.storyboard
@@ -214,30 +214,42 @@
                                     <constraint firstAttribute="height" constant="300" id="lXu-u1-kuF"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOUTUBE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fkf-dp-ilM">
-                                <rect key="frame" x="664" y="872" width="80" height="30"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="67G-FX-Tc9">
+                                <rect key="frame" x="0.0" y="848" width="768" height="176"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOUTUBE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fkf-dp-ilM">
+                                        <rect key="frame" x="664" y="24" width="80" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="OIK-hF-iK6"/>
+                                            <constraint firstAttribute="width" constant="80" id="cYH-Qh-AHF"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="CGx-cT-AMb"/>
-                                    <constraint firstAttribute="height" constant="30" id="MMr-Km-GUX"/>
+                                    <constraint firstAttribute="trailing" secondItem="Fkf-dp-ilM" secondAttribute="trailing" constant="24" id="Ig4-Jh-Ny6"/>
+                                    <constraint firstItem="Fkf-dp-ilM" firstAttribute="top" secondItem="67G-FX-Tc9" secondAttribute="top" constant="24" id="ObY-Ey-O1U"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ogJ-5O-Th2" firstAttribute="top" secondItem="NqG-S5-MOr" secondAttribute="bottom" id="0TJ-L1-whA"/>
+                            <constraint firstItem="rtY-dh-UO8" firstAttribute="top" secondItem="67G-FX-Tc9" secondAttribute="bottom" id="1Ca-aW-NUl"/>
                             <constraint firstAttribute="trailing" secondItem="o1W-1n-ZnZ" secondAttribute="trailing" id="3d8-hH-xEh"/>
-                            <constraint firstAttribute="trailing" secondItem="Fkf-dp-ilM" secondAttribute="trailing" constant="24" id="9tw-Xy-aS0"/>
                             <constraint firstItem="ogJ-5O-Th2" firstAttribute="leading" secondItem="jtG-Wk-fne" secondAttribute="leading" id="AF0-qZ-ZBn"/>
                             <constraint firstItem="o1W-1n-ZnZ" firstAttribute="top" secondItem="1Rk-N8-wmP" secondAttribute="bottom" id="EAl-J3-GxG"/>
+                            <constraint firstItem="67G-FX-Tc9" firstAttribute="top" secondItem="kCr-UQ-UeL" secondAttribute="bottom" id="MW2-LF-IJg"/>
                             <constraint firstItem="NqG-S5-MOr" firstAttribute="top" secondItem="o1W-1n-ZnZ" secondAttribute="bottom" id="Rnv-o9-Udl"/>
-                            <constraint firstItem="Fkf-dp-ilM" firstAttribute="top" secondItem="kCr-UQ-UeL" secondAttribute="bottom" constant="24" id="U87-3z-oWo"/>
                             <constraint firstAttribute="trailing" secondItem="NqG-S5-MOr" secondAttribute="trailing" id="VMT-i0-oSB"/>
                             <constraint firstItem="kCr-UQ-UeL" firstAttribute="top" secondItem="ogJ-5O-Th2" secondAttribute="bottom" constant="24" id="Xvm-qg-neA"/>
                             <constraint firstItem="NqG-S5-MOr" firstAttribute="leading" secondItem="jtG-Wk-fne" secondAttribute="leading" id="bKS-82-RyF"/>
                             <constraint firstAttribute="trailing" secondItem="kCr-UQ-UeL" secondAttribute="trailing" id="kTC-Yq-lBc"/>
+                            <constraint firstItem="67G-FX-Tc9" firstAttribute="leading" secondItem="jtG-Wk-fne" secondAttribute="leading" id="o7F-UN-B3e"/>
+                            <constraint firstAttribute="trailing" secondItem="67G-FX-Tc9" secondAttribute="trailing" id="uWi-n0-afZ"/>
                             <constraint firstItem="o1W-1n-ZnZ" firstAttribute="leading" secondItem="jtG-Wk-fne" secondAttribute="leading" id="w83-Lq-nCv"/>
                             <constraint firstAttribute="trailing" secondItem="ogJ-5O-Th2" secondAttribute="trailing" id="z35-TD-SCX"/>
                             <constraint firstItem="kCr-UQ-UeL" firstAttribute="leading" secondItem="jtG-Wk-fne" secondAttribute="leading" id="zZd-bq-NU0"/>
@@ -336,6 +348,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6FU-KO-O8G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2255" y="824"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="WOH-LM-B0R">
+            <objects>
+                <viewController id="TOQ-Gd-Q3c" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="G25-kt-dGS"/>
+                        <viewControllerLayoutGuide type="bottom" id="a4W-0K-eqR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="UQw-eI-9Vg">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rei-Us-C91" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="816" y="1515"/>
         </scene>
         <!--Project Detail View Controller-->
         <scene sceneID="jPa-EU-O4y">
