--- a/Doocine-iOS/Base.lproj/Main.storyboard
+++ b/Doocine-iOS/Base.lproj/Main.storyboard
@@ -788,7 +788,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_banner_doocine" translatesAutoresizingMaskIntoConstraints="NO" id="xVv-5R-d3j" userLabel="First Cut Image">
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_empty" translatesAutoresizingMaskIntoConstraints="NO" id="xVv-5R-d3j" userLabel="First Cut Image">
                                 <rect key="frame" x="0.0" y="133" width="384" height="360"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -904,7 +904,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_banner_doocine" translatesAutoresizingMaskIntoConstraints="NO" id="DvN-db-Vxg">
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_empty" translatesAutoresizingMaskIntoConstraints="NO" id="DvN-db-Vxg">
                                 <rect key="frame" x="384" y="133" width="384" height="360"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </imageView>
@@ -1026,6 +1026,7 @@
         <image name="icon_delete" width="24" height="24"/>
         <image name="icon_down_arrow" width="24" height="24"/>
         <image name="img_banner_doocine" width="1190" height="464"/>
+        <image name="img_empty" width="81" height="61"/>
         <image name="img_home_title" width="243" height="116"/>
     </resources>
     <inferredMetricsTieBreakers>
