--- a/Doocine-iOS/Base.lproj/Main.storyboard
+++ b/Doocine-iOS/Base.lproj/Main.storyboard
@@ -930,6 +930,16 @@
                                     <constraint firstAttribute="width" constant="60" id="SPA-8N-MbW"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vzA-o1-xTy">
+                                <rect key="frame" x="75" y="73" width="57" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="57" id="XOy-j3-q3x"/>
+                                    <constraint firstAttribute="height" constant="36" id="bsO-G6-WNt"/>
+                                </constraints>
+                                <state key="normal" image="icon_down_arrow">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <constraints>
@@ -967,6 +977,7 @@
                             <constraint firstItem="89B-0L-7uV" firstAttribute="top" secondItem="H61-4C-R2a" secondAttribute="bottom" constant="24" id="dvJ-Fu-MPK"/>
                             <constraint firstItem="Lu0-Gs-F5j" firstAttribute="top" secondItem="lTA-s5-haH" secondAttribute="bottom" constant="12.5" id="exD-Ez-WgT"/>
                             <constraint firstItem="qxJ-0l-xnB" firstAttribute="top" secondItem="gay-aR-hUU" secondAttribute="bottom" constant="19.5" id="g0F-Qx-dmm"/>
+                            <constraint firstItem="vzA-o1-xTy" firstAttribute="top" secondItem="pNp-1O-f9S" secondAttribute="bottom" constant="14" id="gMU-N8-WgU"/>
                             <constraint firstAttribute="trailing" secondItem="sGZ-Qd-LjT" secondAttribute="trailing" constant="24" id="l1j-eN-Zxs"/>
                             <constraint firstItem="aID-Uk-r7G" firstAttribute="leading" secondItem="7Fl-d1-ev5" secondAttribute="leading" id="l56-Cl-OGd"/>
                             <constraint firstAttribute="trailing" secondItem="eey-or-zpl" secondAttribute="trailing" constant="24" id="lri-i6-Qcy"/>
@@ -977,6 +988,7 @@
                             <constraint firstItem="89B-0L-7uV" firstAttribute="centerX" secondItem="MxP-2Z-s6z" secondAttribute="centerX" id="ofh-xK-UNr"/>
                             <constraint firstItem="Lu0-Gs-F5j" firstAttribute="leading" secondItem="MxP-2Z-s6z" secondAttribute="leading" constant="24" id="p0l-Rs-kAJ"/>
                             <constraint firstAttribute="trailing" secondItem="gay-aR-hUU" secondAttribute="trailing" id="pty-qz-fl1"/>
+                            <constraint firstItem="vzA-o1-xTy" firstAttribute="leading" secondItem="IC4-Qn-2IT" secondAttribute="trailing" constant="14.5" id="uQt-Mw-2jv"/>
                             <constraint firstItem="7Fl-d1-ev5" firstAttribute="leading" secondItem="Rd4-9E-rgC" secondAttribute="trailing" constant="24" id="xSh-5U-fHP"/>
                             <constraint firstItem="pNp-1O-f9S" firstAttribute="top" secondItem="1u7-Ab-kVD" secondAttribute="bottom" constant="16" id="yhu-ur-Key"/>
                             <constraint firstItem="pNp-1O-f9S" firstAttribute="leading" secondItem="MxP-2Z-s6z" secondAttribute="leading" constant="24" id="zQN-rG-TWB"/>
@@ -990,6 +1002,7 @@
                         <outlet property="cutNumberLabel" destination="IC4-Qn-2IT" id="iY8-H6-tIb"/>
                         <outlet property="deleteButton" destination="sGZ-Qd-LjT" id="JcV-6d-paK"/>
                         <outlet property="dialogTextField" destination="eey-or-zpl" id="gwA-tB-pUi"/>
+                        <outlet property="editCutNumberButton" destination="vzA-o1-xTy" id="exn-Z9-GXa"/>
                         <outlet property="firstCutImageWidthConst" destination="A8u-Dj-2xl" id="LwM-hO-6M2"/>
                         <outlet property="makeButton" destination="89B-0L-7uV" id="Cgk-pT-bqx"/>
                         <outlet property="secondCutImage" destination="DvN-db-Vxg" id="d1g-D6-kYI"/>
